# TiraLabra

./: MultiAI.py  README.md  TestMarkov.py
dokumentointi/: Käyttöohje.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
sovellus/: pyproject.toml  tasks.py
sovellus/htmlcov/: d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_markov_test_py.html  d_08b4cb1648a15a99_tekoaly_test_py.html  d_145eef247bfb46b6_markov_py.html  d_145eef247bfb46b6_tekoaly_py.html  index.html  status.json
sovellus/src/: markov.py  peliApp.py  pelilogiikka.py  tekoaly.py
sovellus/src/tests/: markov_test.py  tekoaly_test.py
src/: Markov.py  MultiAI.py  Rps.py  TestMarkov.py  rpsApp.py
src/src/: Markov.py  MultiAI.py  Rps.py  rpsApp.py
