[tool.poetry]
name = "sovellus"
version = "0.1.0"
description = ""
authors = ["ollhaa <olli.haapasalo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
pytest = "^7.2.0"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.1"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
